--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>About me page v1</title>
     <link rel="stylesheet" href="styles.css">
 
 </head>
