--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 </header>
 <section class="introduction-section">
   <h1>Introduction</h1>
-  <p>I'm an engineer and prospective developer with an interest in <strong>design</strong>, <strong>sports</strong>, and <strong>entrepreneurship</strong>. I hope to use programming knowledge to develop websites, webapps, and stand-alone applications that
+  <p>I'm an engineer and prospective developer with an interest in <span class="bold">design</span>, <span class="bold">sports</span>, and <span class="bold">entrepreneurship</span>. I hope to use programming knowledge to develop websites, webapps, and stand-alone applications that
     would make a professional engineer's life easier. I'm very excited to learn web development through collaboration and hard work.
     <br>
     <br>Cheers!</p>
 </section>
 <section class="location-section">
   <h1>Where I'm From</h1>
-  <p>I am from everywhere that has influenced my life in some way. <strong>Trinidad and Tobago, Baltimore, Boston, and Bismarck</strong>. I am very laid back but very passionate about finding solutions to problems that help people. I have a good work ethic
+  <p>I am from everywhere that has influenced my life in some way. <span class="bold">Trinidad and Tobago, Baltimore, Boston, and Bismarck</span>. I am very laid back but very passionate about finding solutions to problems that help people. I have a good work ethic
     and pay attention to details as any good engineer does.
     <br>
     <br> I have an undergraduate degree in civil engineering. I hope to finish my graduate degree in civil engineering at the end of 2016.</p>
@@ -34,7 +34,7 @@
   <p>One that does not exchange my time for money on a daily basis. One that has the scale to affect millions and make a difference in peoples' lives. One that allows me to work from anywhere. One that allows me the time of being with the people I love.
     Becoming an entrepreneur is my main goal. I would like to create a membership website that focuses on creating useful applications and educational content that make engineers' lives easier and fosters their professional development.</p>
   <h2>What's you background?</h2>
-  <p>My introduction to programming started with <strong>QBasic and Pascal!</strong> I later learned <strong>C++, MATLAB, and Visual Basic</strong> as they were essential to my development as an engineer.</p>
+  <p>My introduction to programming started with <span class="bold">QBasic and Pascal!</span> I later learned <span class="bold">C++, MATLAB, and Visual Basic</span> as they were essential to my development as an engineer.</p>
   <h2>What music have you been listening to lately?</h2>
   <p>STP, Linkin Park, Soca, Damian Marley, Pearl Jam</p>
 </section>
